--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,7 +213,8 @@ body {
 	margin: 0;
 	padding: 0;
 	list-style: none;
-	margin-top: 10px;
+	margin-top: 50px;
+	margin-left: 20px;
 }
 #sidebar-essay {
 	font-weight: 700;
